[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "esper"
authors = [{name = "Benjamin Moran", email = "benmoran@protonmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.8"

[project.urls]
Home = "https://github.com/benmoran56/esper"
